# deptrack

./: .gitignore  Cargo.toml  README.md  deptrack.toml  deptrack.toml.example  rust-toolchain.toml  taplo.toml
examples/: analyze_branch_changes.rs  analyze_changes.rs  check_changelogs.rs  check_version_bumps.rs  generate_test_repo.rs  test_repo_analysis.rs
src/: error.rs  lib.rs  main.rs
src/utils/: changelog_checker.rs  config.rs  mod.rs  severity.rs  severity_config.rs
src/utils/alt/: evaluable.rs  expr.rs  mod.rs
src/utils/cargo_ops/: discovery.rs  graph.rs  integration.rs  mod.rs  types.rs
src/utils/changelog/: config.rs  mod.rs  parser.rs  types.rs  validator.rs
src/utils/filesystem/: explore.rs  mod.rs  types.rs
src/utils/filesystem/predicates/: context.rs  file_predicates.rs  mod.rs
src/utils/git_ops/: mod.rs  repository.rs  types.rs
src/utils/testing/: git_utils.rs  mod.rs  repo_builder.rs  repository_builder.rs  scenarios.rs
src/utils/toml_ops/: mod.rs  predicates.rs  reader.rs  types.rs
tests/: filesystem_integration.rs  git_ops_integration.rs  test_repo_generation.rs
