[package]
name = "deptrack"
version = "0.21.2"
edition = "2024"

[[bin]]
name = "deptrack"
path = "src/bin/main.rs"

[dependencies]
gix = "0.66"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
petgraph = "0.6"
tempfile = "3.0"
sha2 = "0.10"
blake3 = "1.5"
crc32fast = "1.4"
chrono = { version = "0.4", features = ["serde"] }
xattr = "1.3"
hex = "0.4"
semver = { version = "1.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
